<resources>
    <string name="app_name">Fidelitas_Lugares</string>
    <string name="txtcorreo">Correo</string>
    <string name="txtcontraseña">Contraseña</string>
    <string name="msg_fallo_login">Error al realizar el login</string>
    <string name="msg_fallo_registro">Error al realizar el registro</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="webID">532303612087-odosb6tnpe63dg0ualpo8vdoqenn2lh5.apps.googleusercontent.com</string>

    <string name="menu_home">Lugares</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre del Lugar</string>
    <string name="msg_correo">Correo</string>
    <string name="msg_telefono">Teléfono</string>
    <string name="msg_web">Sitio Web</string>
    <string name="btn_agregar">Agregar</string>
    <string name="btn_actualizar">Actualizar</string>

    <string name="msgEscucharAudio">Escuchar nota de audio</string>
    <string name="msg_imagen">Imagen del lugar</string>
    <string name="graba_pausa">Graba o pausa grabación</string>
    <string name="escuchaPlay">Escucha grabación</string>
    <string name="delete_nota">Borra nota de audio</string>
    <string name="play_nota">Escuchar nota de audio</string>
    <string name="rec_stop_nota">Graba o detiene nota de audio</string>
    <string name="take_photo">Toma foto</string>
    <string name="rotate_l">Rota izquierda</string>
    <string name="rotale_r">Rota a la derecha</string>
    <string name="msg_graba_audio">Grabando nota de audio</string>
    <string name="msg_detener_audio">Nota de audio detenida</string>
    <string name="msg_subiendo_audio">Subiendo Nota Audio</string>
    <string name="msg_subiendo_imagen">Subiendo imagen</string>
    <string name="tv_longitud1">Ver ubicación</string>
    <string name="tv_latitud1">Ver Latitud</string>
    <string name="tv_altura1">Ver Altura</string>
    <string name="msg_ver_mapa">Ver Mapa</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_latitud_lb">Latitud</string>
    <string name="bt_agregar">Agregar</string>
    <string name="todo">por definir</string>
</resources>