<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lugar.UpdateLugarFragment" >

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_nombre"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_correo"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/txtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_telefono"
                android:inputType="phone"
                android:textAlignment="center"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/txtSitioWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_web"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btnActualizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/btn_actualizar" />

            <ImageButton
                android:id="@+id/bt_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/msg_ver_mapa"
                android:src="@drawable/ic_" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="25sp"
                android:padding="10sp"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_latitud1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/tv_latitud1"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_longitud1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/tv_longitud1"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_altura1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/tv_altura1"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_latitud"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_longitud"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_altura"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:textSize="18sp" />

                </TableRow>
            </TableLayout>

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/msg_imagen"
                android:scaleType="centerInside"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/backgrounds/scenic" />
            <ImageButton
                android:id="@+id/btPlay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/msgEscucharAudio"/>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>