<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fidelitas_lugares.ui.lugar.LugarFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_lugar" >
        <action
            android:id="@+id/action_nav_home_to_addLugarFragment"
            app:destination="@id/addLugarFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.fidelitas_lugares.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.fidelitas_lugares.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addLugarFragment"
        android:name="com.fidelitas_lugares.ui.lugar.AddLugarFragment"
        android:label="fragment_add_lugar"
        tools:layout="@layout/fragment_add_lugar" >
        <action
            android:id="@+id/action_addLugarFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>