<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lugar.AddLugarFragment" >

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_nombre"
                android:inputType="textPersonName" />
            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_correo"
                android:inputType="textEmailAddress" />
            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_telefono"
                android:inputType="phone" />
            <EditText
                android:id="@+id/etWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_web"
                android:inputType="textPersonName" />
            <Button
                android:id="@+id/bt_agregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_agregar" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="25sp"
                android:padding="10sp"
                android:stretchColumns="*">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tv_latitud1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/tv_latitud_lb"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tv_longitud1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/tv_longitud_lb"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tv_altura1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/tv_altura_lb"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tv_latitud"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/tv_longitud"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/tv_altura"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:textSize="18sp" />
                </TableRow>
            </TableLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/msgMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/bt_accion"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_mic"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <ImageButton
                    android:id="@+id/bt_play"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_play" />

                <ImageButton
                    android:id="@+id/bt_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_delete" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/bt_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_photo" />

                <ImageButton
                    android:id="@+id/bt_rota_l"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_rotate_l" />

                <ImageButton
                    android:id="@+id/bt_rota_r"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_rotate_r" />
            </LinearLayout>
            <ImageView
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/msg_imagen"
                android:scaleType="centerInside"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/backgrounds/scenic" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>